kubernetes-networks/dashboard/web-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboards
  namespace: kubernetes-dashboard
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
        - path: /dashboard(/|$)(.*)
          pathType: Prefix 
          backend:
            service: 
              name: dashboard-svc
              port: 
                number: 9090
